no good easy fix for overflow. making it hidden again

--- a/bmi.css
+++ b/bmi.css
@@ -2,8 +2,8 @@ body {
     background-color: black;
     background-image: radial-gradient(deepSkyBlue, transparent);
     min-width: 350px;
-    /*overflow-x: hidden;*/
-    /*overflow-y: hidden;*/
+    overflow-x: hidden;
+    overflow-y: hidden;
     font-family: "Shrikhand", serif;
     font-weight: 400;
     font-style: normal;
